# hello-world-fastapi

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  main.py  pyproject.toml
